k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: training-notification
  labels:
    app.kubernetes.io/name: training-notification
spec:
  selector:
    app.kubernetes.io/name: training-notification
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: management
      port: 8081
      targetPort: management
