k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: training-notification
  labels:
    app.kubernetes.io/name: training-notification
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: training-notification
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
      ports:
        - protocol: TCP
          port: 8086
  egress:
    - {}
